--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "author": {
-    "email": "this.eduardo@gmail.com",
-    "name": "Eduardo Gómez",
-    "url": "https://eduardogomez.io"
+    "email": "hauke.m1@gmail.com",
+    "name": "Hauke Maack",
+    "url": "https://godenwind.eu"
   },
   "config": {
     "posts_per_page": 10,
